test_suite/tests/ui/struct-representation/internally-tagged-tuple.stderr
error: #[serde(tag = "...")] can only be used on enums and structs with named fields
 --> $DIR/internally-tagged-tuple.rs:6:10
  |
6 |   struct S (
  |  __________^
7 | |     u8,
8 | |     u8
9 | | );
  | |_^

error: aborting due to previous error

